# Synth

./: CMakeLists.txt  Makefile  synth
src/: main.cpp
src/core/audio/: AudioPlayer.cpp  AudioPlayer.h  AudioProperties.h
src/core/audio/sound-generators/: SoundGenerator.h
src/core/audio/sound-generators/oscillators/: Oscillator.h  SineOscillator.cpp  SineOscillator.h
src/core/audio/sound-modifiers/: SoundModifier.cpp  SoundModifier.h
src/core/audio/sound-modifiers/filters/: Filter.h
